# Cembra_AI

./: .gitignore  ARCHITECTURE_PLAN.md  DELIVERABLES.txt  EXAMPLE_USAGE.py  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build_container.yml  lint.yml  test.yml
configs/: config.yaml
configs/data/: annotations.yaml  gwas_sources.yaml  ld_references.yaml
configs/evaluation/: metrics.yaml
configs/models/: bridge_prs.yaml  catn.yaml  enformer.yaml  ensemble.yaml  ldpred2.yaml  polyfun.yaml  prs_cs.yaml  prs_csx.yaml  susie_inf.yaml  twas.yaml
configs/slurm/: gpu_job.yaml
containers/: Dockerfile  build.sh  singularity.def
data/toy/: README.md  toy_annotations.tsv  toy_bim.tsv  toy_genotype.npy  toy_gwas_eas.tsv  toy_gwas_eur.tsv  toy_ld_eas.npz  toy_ld_eur.npz  toy_phenotype.tsv
docs/: CATN_USAGE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README_CATN.md  catn_architecture.md  hpc_guide.md  methods_whitepaper.md
scripts/: generate_toy_data.py
scripts/slurm/: 01_download_data.sh  02_qc_harmonize.sh  03_enformer_scoring.sh  04_prs_baseline.sh  05_cross_ancestry_prs.sh  06_polyfun_finemapping.sh  07_prs_refinement.sh  08_twas_smr.sh  09_train_catn.sh  10_ensemble.sh  11_evaluation.sh  run_full_pipeline.sh
src/oa_prs/: __init__.py  cli.py  config.py  constants.py
src/oa_prs/data/: __init__.py  datasets.py  download.py  harmonize.py  ld_utils.py  qc.py  simulate.py  standardize.py
src/oa_prs/evaluation/: __init__.py  ablation.py  calibration.py  discrimination.py  fairness.py  leave_one_study.py  report_generator.py  risk_stratification.py
src/oa_prs/models/: __init__.py
src/oa_prs/models/base/: __init__.py  ldpred2.py  prs_cs.py
src/oa_prs/models/ensemble/: __init__.py  prs_refiner.py  pumas_ensemble.py  stacker.py
src/oa_prs/scoring/: __init__.py  prs_scorer.py
src/oa_prs/utils/: __init__.py  genetics.py  io.py  logging_config.py  reproducibility.py  slurm.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_catn_train_toy.py  test_data_pipeline.py  test_full_pipeline_toy.py
tests/unit/: __init__.py  test_catn_layers.py  test_catn_model.py  test_harmonize.py  test_metrics.py  test_qc.py  test_scoring.py  test_simulate.py
(+16 files in other folders)
